Fixed layout issues, added functionality to all pages

--- a/css/styles.css
+++ b/css/styles.css
@@ -701,6 +701,12 @@ h4 { font-size: 24px; }
     overflow: hidden;
 }
 
+.product-image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
 .product-image::after {
     content: '';
     position: absolute;
